--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>saskia VR scene</title>
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script> 
+  <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script> 
 </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
+  <a-scene>
+   <a-entity environment="preset: forest; dressingAmount:700;"></a-entity>
+  <!-- Start of Whare/ House/ Museum -->  
+      <a-box id="floor" position="0 0 0" color="blue" scale= "10.5 10.5 .1" rotation= "90 0 0" ></a-box>  
+    <a-box id="box1" position=" 0  1.473  4.907" rotation="0  0  0" scale="10  3  0.2 " color="white"></a-box>
+    <a-box id="box1" position=" 0  1.473  -4.907 " rotation="0  0  0" scale="10  3  0.2" color="white"></a-box>
+    <a-box id="box1" position=" 5.049  1.454  -0.008 " rotation="0  -90  0" scale="10  3  0.2" color="white"></a-box>
+    <a-box id="box1" position=" -5.049 1.454  -0.008" rotation="0  -90  0" scale="10  3  0.2" color="white"></a-box>
+    <a-cylinder id="triangle_front" segments-radial="3" position="0  3.874 4.907" rotation="-90  0  0" scale="5.774  0.2  1.8" color="white"></a-cylinder> 
+      <a-cylinder id="triangle_back" segments-radial="3" position="0  3.874 -4.907" rotation="-90  0  0" scale="5.774  0.2  1.8" color="white"></a-cylinder>
+    <a-box id="roof_right" position="2.580  4.328  0" rotation="28.433  90  0" scale= "10.931 0.20  6.110" color="blue"></a-box>
+    <a-box id="roof_left" position="-2.599  4.3321  -0.017" rotation="28.433  -90  0" scale= "10.6.130 0.20  6.110" color="blue"></a-box> <--!end of house-->
+      <--! artwork strt -->
+ <a-plane id="art1" src="images/koala-8028992_1280.jpg" scale="2 2 0.05" rotation="0 0 0" position="-0.036 1.696 -4.792"></a-plane>
+        <a-obj-model id="3dModel1" src="images/tinker.obj" mtl="images/obj.mtl" position="0 0 0" rotation="-90 0 0" scale=" 0.05 0.05 0.05"></a-obj-model>
+
+
+
+
+
+    
+    
+  </a-scene>
 </body>
 
 </html>
